x1125 LibraryPrepRequest
Rewrite Transfer (SlotCopyService), Dual index plate
(ReagentTransferService) and Amplification
(OpWithSlotMeasurementsService) to make calling into them easier and
avoid too much repeated code.
LibraryPrepService validates each op with the appropriate
service, and then records all three ops. The ops are carried out
in one transaction, after which relevant source labware are
discarded from storage.